adds images and css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="" href="index.js">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h2>Ramen Rater</h2>
-    
+    <div>
+        <img class="image-container" src="Images/gyukotsu.jpg" alt="gyukotsu">
+        <img class="pics" src="Images/kojiro.jpg" alt="kojiro">
+        <img class="pics" src="Images/naruto.jpg" alt="naruto">
+        <img class="image-container" src="Images/nirvana.jpg" alt="nirvana">
+        <img class="image-container" src="Images/shoyu.jpg" alt="shoyu">
+    </div>                                                                                                          </div>
 </body>
 </html>
