customizes the header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img class="pics" src="Images/naruto.jpg" alt="naruto">
         <img class="image-container" src="Images/nirvana.jpg" alt="nirvana">
         <img class="image-container" src="Images/shoyu.jpg" alt="shoyu">
-    </div>                                                                                                          </div>
+    </div>
+    <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu">                                                                                                          </div>
 </body>
 </html>
