--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
 </head>
 <body>
     <h2>Ramen Rater</h2>
-    <div>
+    <div id="ramen-menu">
         <img class="image-container" src="Images/gyukotsu.jpg" alt="gyukotsu">
         <img class="pics" src="Images/kojiro.jpg" alt="kojiro">
         <img class="pics" src="Images/naruto.jpg" alt="naruto">
         <img class="image-container" src="Images/nirvana.jpg" alt="nirvana">
         <img class="image-container" src="Images/shoyu.jpg" alt="shoyu">
     </div>
-    <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu">                                                                                                          </div>
+    <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu"></div>
+
+    <h3>Add New Ramen</h3>
+    <form>
+        <label for="fname">Name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="rname">Restaurant:</label><br>
+        <input type="text" id="rname" name="rname"><br>
+        <label for="pic">Image:</label><br>
+        <input type="text" id="pic" name="pic"><br>
+        <label for="rating">Rating:</label><br>
+        <input type="text" id="rating" name="rating"><br>
+        <label for="comm">Comment:</label><br>
+        <input type="text" id="comm" name="comm"><br>
+      </form>
 </body>
 </html>
