--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu"></div>
 
     <h3>Add New Ramen</h3>
-    <form>
+    <form id="ramen-form">
         <label for="fname">Name:</label><br>
         <input type="text" id="fname" name="fname"><br>
         <label for="rname">Restaurant:</label><br>
@@ -30,6 +30,7 @@
         <input type="text" id="rating" name="rating"><br>
         <label for="comm">Comment:</label><br>
         <input type="text" id="comm" name="comm"><br>
+        <button id="button" type="submit">Create</button>
       </form>
-</body>
+    </body>
 </html>
