--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <h2>Ramen Rater</h2>
     <div id="ramen-menu">
         <img class="image-container" src="Images/gyukotsu.jpg" alt="gyukotsu">
-        <img class="pics" src="Images/kojiro.jpg" alt="kojiro">
-        <img class="pics" src="Images/naruto.jpg" alt="naruto">
+        <img class="image-container" src="Images/kojiro.jpg" alt="kojiro">
+        <img class="image-container" src="Images/naruto.jpg" alt="naruto">
         <img class="image-container" src="Images/nirvana.jpg" alt="nirvana">
         <img class="image-container" src="Images/shoyu.jpg" alt="shoyu">
     </div>
+    
     <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu"></div>
 
     <h3>Add New Ramen</h3>
