adds rating and comment

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     <div id="ramen-menu">
         
     </div>
-    
-    <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu"></div>
+    <div>
+        <img id="im2" src="Images/gyukotsu.jpg" alt="gyukotsu"></div>
+        <h3 style="text-align: center;">Rating</h3>
+        <p style="text-align: center;" id="rating-p">3/5</p>
+        <h3 style="text-align: center;">Comment</h3>
+        <p style="text-align: center;" id="comment-p">Average</p>
+    </div>
 
-    <h3>Add New Ramen</h3>
+    <h3 class="form-heading">Add New Ramen</h3>
     <form id="ramen-form">
         <label for="fname">Name:</label><br>
         <input type="text" id="fname" name="fname"><br>
